<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/dimen_16"
        android:layout_marginTop="104dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="@dimen/dimen_16"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_8"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_8"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/sos_icon"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />

    <ImageView
        android:id="@+id/sos_icon"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        android:src="@drawable/sos"
        android:layout_margin="@dimen/dimen_16"
        android:layout_width="96dp"
        android:layout_height="150dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        app:cardBackgroundColor="@color/aqua"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        app:cardCornerRadius="@dimen/dimen_16"
        android:layout_margin="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:strokeWidth="0dp"/>

    <TextView
        android:id="@+id/text_guard"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        android:elevation="@dimen/dimen_8"
        android:layout_margin="@dimen/dimen_16"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24_sp"
        android:text="@string/guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_8"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guard_icon"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />

    <ImageView
        android:id="@+id/guard_icon"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        android:src="@drawable/ic_guard_main"
        android:layout_margin="@dimen/dimen_16"
        android:layout_width="96dp"
        android:layout_height="150dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        app:menu="@menu/bottom_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>